# FastNotifyMQ

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: main.py
app/config/: log_config.py
app/configs/: database.py
app/controllers/: user_controller.py
app/domain/dtos/: user_dto.py
app/domains/dtos/: user_dto.py
app/prisma/: schema.prisma
app/repositories/: interfaces.py  user_repository.py
app/services/: user_service.py
postman/: Users.postman_collection.json
