[tool.poetry]
name = "fastnotifymq"
version = "0.1.0"
description = ""
authors = ["Lucas Del Puerto Garcia <lucas.d.puerto@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.3"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.1"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
